--- a/users/templates/users/profile_base.html
+++ b/users/templates/users/profile_base.html
@@ -1,3 +1,4 @@
+<!-- templates/users/profile_base.html -->
 {% extends 'base.html' %}
 
 {% block title %}Профиль пользователя{% endblock %}
@@ -17,6 +18,10 @@
                 <li class="nav-item">
                     <a class="nav-link {% if active_tab == 'articles' %}active{% endif %}"
                        href="{% url 'users:profile_articles' %}">Мои статьи</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if active_tab == 'favorites' %}active{% endif %}"
+                       href="{% url 'users:profile_favorites' %}">Избранное</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {% if active_tab == 'activity' %}active{% endif %}"
