--- a/templates/include/nav_menu.html
+++ b/templates/include/nav_menu.html
@@ -3,31 +3,31 @@
 <ul class="navbar-nav me-auto">
     {% for item in menu %}
         <li class="nav-item">
-            <a class="nav-link" href="{% url item.url_name %}">
+            <a class="nav-link {% if request.resolver_match.url_name == item.url_name %}active{% endif %}" href="{% url item.url_name %}">
                 {% if item.title == 'Главная' %}
-                    <i class="bi bi-house-door me-1"></i>
+                    <i class="bi bi-house-door nav-icon"></i>
                 {% elif item.title == 'О проекте' %}
-                    <i class="bi bi-info-circle me-1"></i>
+                    <i class="bi bi-info-circle nav-icon"></i>
                 {% elif item.title == 'Каталог' %}
-                    <i class="bi bi-grid me-1"></i>
+                    <i class="bi bi-grid nav-icon"></i>
                 {% endif %}
                 {{ item.title }}
             </a>
         </li>
         {% if not forloop.last %}
-            <li class="nav-item"><hr class="dropdown-divider"/></li>
+            <li class="nav-item"><div class="nav-divider"></div></li>
         {% endif %}
     {% endfor %}
 
     <!-- Добавляем разделитель перед пунктами управления -->
-    <li class="nav-item"><hr class="dropdown-divider"/></li>
+    <li class="nav-item"><div class="nav-divider"></div></li>
 
     <!-- Пункт "Загрузить из JSON" - только для модераторов и админов -->
     {% if user.is_authenticated %}
         {% if user.is_superuser or user|has_group:'Moderator' %}
         <li class="nav-item">
            <a class="nav-link" href="{% url 'news:upload_json' %}">
-               <i class="bi bi-upload me-1"></i> Загрузить из JSON
+               <i class="bi bi-upload nav-icon"></i> Загрузить из JSON
           </a>
         </li>
         {% endif %}
